@@ -1,3 +1,9 @@
+TAG: qcreports_db-3-5-1-22
+DATE: 11/09/2006
+STAFF: lec
+CHANGES:
+1) change param list for msp/runQC.csh, seqload/runQC.csh
+
 TAG: qcreports_db-3-5-1-21
 DATE: 11/07/2006
 STAFF: lec
